Add explicit Canonmill support
Fix: https://github.com/io7m/idstore/issues/100